# lastfm

./: .env~sample  .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
examples/: customise_client.rs  customise_retry_strategy.rs  fetch_all.rs
src/: artist.rs  client.rs  error_response.rs  errors.rs  imageset.rs  lfm_date.rs  lib.rs  main.rs  recent_tracks_page.rs  retry_delay.rs  retry_strategy.rs  track.rs  types.rs
src/fixtures/: now_playing_track.json  recent_tracks_page.json  recorded_track.json
src/lfm/: client.rs  error_response.rs  errors.rs  imageset.rs  mod.rs  recent_tracks_page.rs  retry_delay.rs  track.rs
src/lfm/snapshots/: lastfm__lfm__recent_tracks_page__tests__it_deserializes_a_recent_tracks_page.snap  lastfm__lfm__track__tests__now_playing.snap  lastfm__lfm__track__tests__recorded.snap
src/snapshots/: lastfm__recent_tracks_page__tests__it_deserializes_a_recent_tracks_page.snap  lastfm__track__tests__now_playing.snap  lastfm__track__tests__recorded.snap
