[package]
name = "lastfm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.23", features = ["serde"] }
dotenv = "0.15.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.152", features=["derive"]}
serde_json = "1.0.92"
tokio = { version = "1", features = ["full"] }
url = "2.3.1"
