[package]
name = "lastfm"
version = "0.8.1"
edition = "2021"
authors = ["Luciano Mammino"]
description = "An async client to fetch your Last.fm listening history or the track you are currently playing"
documentation = "https://docs.rs/lastfm"
repository = "https://github.com/lmammino/lastfm"
keywords = ["lastfm", "web", "api"]
categories = ["api-bindings"]
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3.5"
chrono = { version = "0.4.23", features = ["serde"] }
dotenv = "0.15.0"
lazy_static = "1.4.0"
rand = "0.8.5"
reqwest = { version = "0.11", default_features = false, features = [
  "json",
  "rustls-tls",
] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.92"
thiserror = "1.0.40"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.11"
tracing = "0.1.37"
typed-builder = "0.16.0"
url = "2.3.1"

[dev-dependencies]
insta = "1.26.0"
futures-util = "0.3.26"
